@@ -414,6 +414,15 @@ class AimlHandler(ContentHandler):
 			if a not in optional and not self._forwardCompatibleMode:
 				raise AimlParserError, ("Unexpected \"%s\" attribute in <%s> element " % (a,name))+self._location()
 
+		# special-case: several tags contain an optional "index" attribute.
+		# This attribute's value must be an integer.
+		if name in ["star", "thatstar", "topicstar"]:
+			for k,v in attr.items():
+				if k == "index":
+					try: temp = int(v)
+					except:
+						raise AimlParserError, ("Bad type for \"%s\" attribute (expected integer, found \"%s\") " % (k,v))+self._location()
+
 		# See whether the containing element is permitted to contain
 		# subelements. If not, this element is invalid no matter what it is.
 		try:
